修改全部GMV、221GMV跳转方式,修改社员查询sql，添加社员到期时间

--- a/WebContent/crm/index_K.html
+++ b/WebContent/crm/index_K.html
@@ -2751,7 +2751,7 @@ Date.prototype.format = function() {
         }else{
             url = "index_K_member.html?t="+encode64(0);
         }
-        window.open(url,"index_K_member");
+        window.location.href=url;
     }
 </script>
 
