修改全部GMV、221GMV、社员GMV跳转参数

--- a/WebContent/crm/index_K.html
+++ b/WebContent/crm/index_K.html
@@ -2736,7 +2736,7 @@ Date.prototype.format = function() {
   function toBussiness(){
 	  var url = "";
 	  if(target==0){
-		  	url = "index_K_221.html?t="+encode64('0')+"&s=&sn=&c=&cn=";
+		  	url = "index_K_221.html?t="+encode64('0')+"&s=&sn=&c=&cn=&so="+encode64(storeNo_)+"&ordertype="+encode64(ordertype)+"&store_name="+encode64(storeName_);
 		  }else if(target==1){
 		  	url = "index_K_221.html?t="+encode64(1)+"&s=&sn=&c=cn=&so="+encode64(storeNo_)+"&ordertype="+encode64(ordertype)+"&store_name="+encode64(storeName_);
 		  }
@@ -2745,9 +2745,9 @@ Date.prototype.format = function() {
     function doK_Mem(){
         var url = "";
         if(target==0){
-            url = "index_K_member.html?t="+encode64(target)+"&c=&cn=&e=";
+            url = "index_K_member.html?t="+encode64(target)+"&c=&cn=&so="+encode64(storeNo_)+"&ordertype="+encode64(ordertype)+"&store_name="+encode64(storeName_)+"&e=";
         }else if(target==1){
-            url = "index_K_member.html?t="+encode64(1)+"&s=&c="+ encode64(cityId)+"&cn="+encode64(cityName)+"&e=";
+            url = "index_K_member.html?t="+encode64(1)+"&s=&c="+ encode64(cityId)+"&so="+encode64(storeNo_)+"&ordertype="+encode64(ordertype)+"&store_name="+encode64(storeName_)+"&cn="+encode64(cityName)+"&e=";
         }else{
             url = "index_K_member.html?t="+encode64(0);
         }
