修改大客户社员饼图样式

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -1045,7 +1045,7 @@
                         label: {
                             normal: {
                                 position: 'out', //标签的位置
-                                formatter: '{b}\n{d}%',
+                                formatter: '{b}:{c}\n{d}%',
                                 color: '#59ADF3'
 
                             }
@@ -1057,7 +1057,7 @@
                         },
                         itemStyle: {
                             normal: {
-                                borderWidth: 4,
+                                borderWidth: 2,
                                 borderColor: '#FFCC67',
                                 labelLine: {
                                     show: true
@@ -1072,7 +1072,7 @@
                         }
                     }] ,
                 color: [
-                    '#00acee',
+                    '#c23531',
                     '#52cdd5',
                 ],
             };
