--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -114,8 +114,9 @@
                                     </dl>
                                     <dl class="pull-left">
                                         <dt><i></i>档案数据</dt>
-                                        <dd><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案 </a>
-                                        </dd>
+                                        <dd style="position:relative"><a href="javascript:goToMemberDataStat()"><span class="fa fa-vimeo"></span>社员档案 </a>
+                                        <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
+                                        <dd><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案 </a></dd>
                                         <dd><a href="javascript:searchData()"><span class="fa fa-file-o"></span>订单档案</a></dd>
                                         <dd><a href="javascript:searchEmployeeData()"><span class="fa fa-newspaper-o"></span>员工档案</a></dd>
                                         <dd><a href="javascript:searchArea()"><span class="fa fa-copy"></span>片区档案</a></dd>
