--- a/WebContent/crm/dynamicData_storetrade_analysis.html
+++ b/WebContent/crm/dynamicData_storetrade_analysis.html
@@ -280,7 +280,7 @@
 		elem:'#be_date1',
 		value:new Date(),
 		type:"month",
-		btns: ['now', 'confirm'],
+		btns: ['confirm','now'],
 		theme: '#11214e',
 		min: '2018-1-1',
 		max:year_month
