--- a/WebContent/crm/dynamicData_gmv_tto.html
+++ b/WebContent/crm/dynamicData_gmv_tto.html
@@ -393,7 +393,7 @@
         elem:'#be_date1',
         value:new Date(),
         type:"month",
-        btns: ['now', 'confirm'],
+        btns: ['confirm','now'],
         theme: '#11214e',
         min: '2018-1-1',
         max:year_month
@@ -404,7 +404,7 @@
         elem:'#be_date2',
         value:new Date(),
         type:"month",
-        btns: ['now', 'confirm'],
+        btns: ['confirm','now'],
         theme: '#11214e',
         min: '2018-1-1',
         max:year_month
