--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -107,8 +107,8 @@
             background-color:rgba(241,241,241,1);
             box-shadow: 0 1px 1px rgba(0,0,0,1);
             border-radius:10px;
-            position: fixed;
-            margin:auto;left:36%; top:30%;
+            position: absolute;
+            /*margin:auto;left:25%; top:60%;*/
             z-index: 1;
         }
     </style>
@@ -570,7 +570,6 @@
                     chart7div.style.width=350+'px';
                     myChart0.resize(350);
                     myChart0.setOption(option0);
-
                     $("#bigMember2").show();
                     $("#cmBig").show();
                 }else{
@@ -1021,14 +1020,14 @@
                 tooltip: {
                     trigger: 'item',
                     formatter: "{b} : {c} ({d}%)"
-                },
-                legend: {
+                }
+/*                ,legend: {
                     selectedMode:false,
                     right:10,
                     top: 10,
                     orient:'vertical',
-                    data:['老会员升级', '新会员开卡']
-                }
+                    data:['大客户开卡', '普通开卡']
+                }*/
                 ,series: [
                     {
                         type: 'pie',
@@ -1037,10 +1036,10 @@
                         //clockwise: false,
                         data: [{
                             value: mem_big,
-                            name: '大客户社员'
+                            name: '大客户开卡'
                         }, {
                             value: (mem_all-mem_big),
-                            name: '普通开卡社员'
+                            name: '普通开卡'
                         }],
                         label: {
                             normal: {
