更改订单档案链接参数

--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -1392,7 +1392,7 @@ Date.prototype.format=function(fmt) {
 		   	  if(result!=null){
 			       var ename = "<strong>送单侠名称：</strong>"+result.employee_name+"<br>";
  			       var ephone = "<strong>送单侠电话：</strong><a style=\"color:#000\" href=\"javascript:searchEmployee('"+result.employee_phone+"')\">"+result.employee_phone+"</a><br>";
- 			       var eAname = "<strong>片区A国安侠名：</strong><a style=\"color:#000\" href=\"javascript:searchEmployee('"+result.employee_phone+"')\">"+result.employee_a_name+"</a><br>";
+ 			       var eAname = "<strong>片区A国安侠名：</strong><a style=\"color:#000\" href=\"javascript:searchEmployee('"+result.employee_a_phone+"')\">"+result.employee_a_name+"</a><br>";
  			   	   var eAphone = "<strong>片区A国安侠电话：</strong><a style=\"color:#000\" href=\"javascript:searchEmployee('"+result.employee_a_phone+"')\">"+result.employee_a_phone+"</a><br>";
 			       var employeecontent = ename+ephone+eAname+eAphone;
 				   	  
