更改社员档案列名

--- a/WebContent/crm/memberData_list.html
+++ b/WebContent/crm/memberData_list.html
@@ -171,7 +171,7 @@
                                     <th width="10%">社员开卡时间</th>
                                     <th width="10%">邀请码</th>
                                     <th width="10%">城市</th>
-                                    <th width="10%">门店</th>
+                                    <th width="10%">社员开卡门店</th>
                                 </tr>
 
                                 </tbody>
