修改明查问题

--- a/WebContent/data_access/observeManagementApp.html
+++ b/WebContent/data_access/observeManagementApp.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Untitled Document</title>
 		<link rel="stylesheet" type="text/css" href="css/i2/style_sheet_core.css"/>
-		<script type="text/javascript" src="js/lib.js" />
+		<script type="text/javascript" src="../bizbase/js/lib.js" />
 	</head>
 	<body>
 	</body>
