--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -317,15 +317,15 @@
               <table class="table table-striped no-margin">
                 <tbody id="manual_tbody">
                 <tr id="manual_title">
-                  <td width="9%">订单号</td>
-                  <td width="9%">客户信息</td>
-                  <td width="9%" id="price_sort">金额（元）<i class="fa fa-angle-up" id="price_sort_label"></i></td>
-                  <td width="10%">片区信息</td>
-                  <td width="10%" id="time_sort">签收时间 <i class="fa fa-angle-up" id="time_sort_label"></i></td>
-                  <td width="9%">业务信息</td>
-                  <td width="10%">人员信息</td>
+                  <td width="9%" style="font-weight:bold;">订单号</td>
+                  <td width="9%" style="font-weight:bold;">客户信息</td>
+                  <td width="9%" style="font-weight:bold;" id="price_sort">金额（元）<i class="fa fa-angle-up" id="price_sort_label"></i></td>
+                  <td width="10%" style="font-weight:bold;">片区信息</td>
+                  <td width="10%" style="font-weight:bold;" id="time_sort">签收时间 <i class="fa fa-angle-up" id="time_sort_label"></i></td>
+                  <td width="9%" style="font-weight:bold;">业务信息</td>
+                  <td width="10%" style="font-weight:bold;">人员信息</td>
 <!--                   <td width="9%">利润（元）</td> -->
-                  <td width="10%">订单标签</td>
+                  <td width="10%" style="font-weight:bold;">订单标签</td>
                 </tr>
                 </tbody>
               </table>
